# cardpine

./: .gitignore  README.md  pyproject.toml
cardpine/: __init__.py  cli.py  deck.py  scheduler.py  store.py  ui.py
examples/: spanish-basics.txt
tests/: test_deck.py  test_scheduler.py  test_store.py
