[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardpine"
version = "1.0.0"
description = "Spaced-repetition flashcards for your terminal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "brod-dev" }]
keywords = ["flashcards", "spaced-repetition", "study", "cli", "sm-2"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
]

[project.scripts]
cardpine = "cardpine.cli:main"

[tool.setuptools]
packages = ["cardpine"]
